-20250817
- New version after evaluation
- My notes